Fixed z-index issue with item badging on list page

--- a/Modules/themes/Firefighter@1.0.0/Sass/Header/_header.scss
+++ b/Modules/themes/Firefighter@1.0.0/Sass/Header/_header.scss
@@ -483,7 +483,7 @@ $sc-top-nav-height: $sc-target-size - 20;
 #header-affix-element.affix {
 	top: 0;
 	position: fixed;
-	z-index: 1000;
+	z-index: 1002;
 	width: 100%;
 	background-color: #fff;
 }
